# tpglibs

./: CMakeLists.txt
cmake/: tpgengineConfig.cmake.in  tpglibsConfig.cmake.in
docs/: README.md
include/tpgengine/: AVXAbsRunSumProcessor.hpp  AVXFactory.hpp  AVXFrugalPedestalSubtractProcessor.hpp  AVXGenerator.hpp  AVXPipeline.hpp  AVXProcessor.hpp  AVXRunSumProcessor.hpp  AVXThresholdProcessor.hpp  AVXUtils.hpp  AbstractFactory.hpp  AbstractFactory.hxx  AbstractProcessor.hpp  NaiveAbsRunSumProcessor.hpp  NaiveFactory.hpp  NaiveFrugalPedestalSubtractProcessor.hpp  NaiveProcessor.hpp  NaiveRunSumProcessor.hpp  NaiveThresholdProcessor.hpp  NaiveUtils.hpp  TPGPipeline.hpp  TPGenerator.hpp
include/tpglibs/: AVXAbsRunSumProcessor.hpp  AVXFactory.hpp  AVXFixedPedestalSubtractProcessor.hpp  AVXFrugalPedestalSubtractProcessor.hpp  AVXPipeline.hpp  AVXProcessor.hpp  AVXRunSumProcessor.hpp  AVXThresholdProcessor.hpp  AVXUtils.hpp  AbstractFactory.hpp  AbstractFactory.hxx  AbstractProcessor.hpp  NaiveAbsRunSumProcessor.hpp  NaiveFactory.hpp  NaiveFrugalPedestalSubtractProcessor.hpp  NaiveProcessor.hpp  NaiveRunSumProcessor.hpp  NaiveThresholdProcessor.hpp  NaiveUtils.hpp  TPGPipeline.hpp  TPGenerator.hpp
pybindsrc/: module.cpp  pythonbindingsrenameme.cpp  registrators.hpp
python/tpgengine/: __init__.py
python/tpglibs/: __init__.py
src/: AVXAbsRunSumProcessor.cpp  AVXFixedPedestalSubtractProcessor.cpp  AVXFrugalPedestalSubtractProcessor.cpp  AVXGenerator.cpp  AVXPipeline.cpp  AVXRunSumProcessor.cpp  AVXThresholdProcessor.cpp  NaiveAbsRunSumProcessor.cpp  NaiveFrugalPedestalSubstractProcessor.cpp  NaiveFrugalPedestalSubtractProcessor.cpp  NaiveRunSumProcessor.cpp  NaiveThresholdProcessor.cpp  TPGenerator.cpp
test/: numa-avx-faults.cxx
unittest/: CMakeLists.txt  avx_factory.cxx  avx_factory_test.cxx  avx_generator.cxx  avx_generator_test.cxx  avx_pipeline.cxx  avx_pipeline_test.cxx  avx_processors.cxx  avx_processors_test.cxx
